Demo Packs/Intake Builder Pack/force-app/main/default/objects/Intake_Translation__c/Intake_Translation__c.object-meta.xml
<CustomObject>
    <label>Intake Translation</label>
    <pluralLabel>Intake Translations</pluralLabel>
    <nameField>
        <label>Translation Number</label>
        <type>AutoNumber</type>
        <displayFormat>ITR-{00000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>Localized question copy for an Intake Question.</description>
</CustomObject>