Demo Packs/Intake Builder Pack/force-app/main/default/objects/Intake_Translation__c/fields/Help_Text_Translated__c.field-meta.xml
<CustomField>
    <fullName>Help_Text_Translated__c</fullName>
    <label>Help Text (Translated)</label>
    <type>LongTextArea</type>
    <length>1000</length>
</CustomField>