Demo Packs/Intake Builder Pack/force-app/main/default/objects/Intake_Translation__c/fields/Question_Text_Translated__c.field-meta.xml
<CustomField>
    <fullName>Question_Text_Translated__c</fullName>
    <label>Question Text (Translated)</label>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>